--- a/templates/default/upstart.erb
+++ b/templates/default/upstart.erb
@@ -1,5 +1,5 @@
-description "<%= @description %>"
-author  "<%= @author_name %> <<%= @author_email %>>"
+description "An optimized HTTP server"
+author  "Kenji Akiyama <artifactsauce@gmail.com>"
 
 start on runlevel [2345]
 stop on runlevel [!2345]
